<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_memories"
            android:icon="@drawable/ic_menu_account"
            android:title="@string/menu_memories" />
        <item
            android:id="@+id/nav_addBlock"
            android:icon="@drawable/ic_menu_add"
            android:title="@string/menu_addBlock" />
        <item
            android:id="@+id/nav_findBlock"
            android:icon="@drawable/ic_menu_find"
            android:title="@string/menu_findBlock" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_setting" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
