<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_navigation"
    app:startDestination="@+id/nav_memories">

    <fragment
        android:id="@+id/nav_memories"
        android:name="founders.blockers.beyondcloudapp.ui.memories.MemoriesFragment"
        android:label="@string/menu_memories"
        tools:layout="@layout/fragment_memories" />

    <fragment
        android:id="@+id/nav_addBlock"
        android:name="founders.blockers.beyondcloudapp.ui.addBlock.AddBlockFragment"
        android:label="@string/menu_addBlock"
        tools:layout="@layout/fragment_addblock" />

    <fragment
        android:id="@+id/nav_findBlock"
        android:name="founders.blockers.beyondcloudapp.ui.findBlock.FindBlockFragment"
        android:label="@string/menu_findBlock"
        tools:layout="@layout/fragment_findblock" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="founders.blockers.beyondcloudapp.ui.Setting.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/nav_share"
        android:name="founders.blockers.beyondcloudapp.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="founders.blockers.beyondcloudapp.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>