<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
  >

    <TextView
        android:id="@+id/add_title_1"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="295dp"
        android:text="@string/add_name_1"
        android:textAllCaps="true"
        android:textColor="#56378F"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/add_tittle_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"

        android:text="@string/add_name_2"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#56378F"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_title_1" />

    <TextView
        android:id="@+id/add_subtitle_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_subtitle_1"
        android:textColor="#ff97a2c6"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_tittle_2" />

    <TextView
        android:id="@+id/add_subtitle_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/add_subtitle_2"
        android:textColor="#ff97a2c6"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_subtitle_1" />

    <LinearLayout
        android:id="@+id/inputBox2"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="130dp"
        android:layout_gravity="center">

        <Button
            android:id="@+id/add_btn_1"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="#9b92b3"
            android:textColor="#ffffff"
            android:text="Keep my love on Block" />

        <Button
            android:id="@+id/add_btn_2"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="#9b92b3"
            android:textColor="#ffffff"
            android:text="Keep me on Block" />
    </LinearLayout>


    <!--    <include-->
<!--        layout="@layout/activity_choose_add_type"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="268dp" />-->




</LinearLayout>