<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/app_title_1"
        android:layout_width="205dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="295dp"
        android:text="@string/app_name_1"
        android:textAllCaps="true"
        android:textColor="#56378F"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_tittle_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"

        android:text="@string/app_name_2"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#56378F"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_title_1" />

    <TextView
        android:id="@+id/app_subtitle_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/subtitle_1"
        android:textColor="#ff97a2c6"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_tittle_2" />

    <TextView
        android:id="@+id/app_subtitle_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/subtitle_2"
        android:textColor="#ff97a2c6"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_subtitle_1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="150dp"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/login_btn"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="#ffffff"
            android:text="Start"
            android:textColor="#9b92b3"
            android:textStyle="bold" />

        <Button
            android:id="@+id/connect_btn"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"
            android:background="#9b92b3"
            android:text="Sign in with Galaxy"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="#9b92b3"
            android:text="Sign up"
            android:textColor="#ffffff"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>